--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -144,5 +144,6 @@
     font-size: 1.1vw;
     font-weight: 500;
     /* border: 0.1vw solid #5B7EFB; */
+    background-color: #F0F2F4;
     text-align: justify;
 }
