link to preinterview page

--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -133,7 +133,7 @@
     
 }
 
-.Connected {
+/* .Connected {
     position: relative;
     font-family: Montserrat;
     font-style: normal;
@@ -154,7 +154,7 @@
     border-radius: 45px;
     
 
-}
+} */
 
 /*-------------------- start button --------------------*/
 .link-to-interviewpage {
