--- a/src/front/src/pages/NotificationPage/Notification.css
+++ b/src/front/src/pages/NotificationPage/Notification.css
@@ -1,30 +1,68 @@
-.notification-layout {
+.NotificationApp {
+    /* position: relative; */
+    width: 100%;
+    height: auto;
+    left: 0vw;
+}
+
+/* --------------- notice 1 ---------------- */
+.notification-layout1 {
     position: relative;
     /* width: 100%; */
     height: 580px;
     margin-top: 20px;
     margin-right: 80px;
-    /* left: 0px; */
-    /* top: 433px; */
+}
+
+.notice-1 {
+    /* height: 80px; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    font-size: 1.2rem;
 }
 
 .notification-title {
     position: relative;
-    width: 200px;
-    height: 37px;
+    /* width: 200px; */
+    height: 80px;
     padding-left: 80px;
-    /* top: 42px; */
+    
 
     font-family: Montserrat;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 23px;
-    line-height: 37px;
-    color: rgb(81, 119, 255);
+    /* font-weight: 500; */
+    font-size: 18px;
+    line-height: 25px;
+    /* color: rgb(81, 119, 255); */
 
     display: flex;
     align-items: center;
 }
+
+.notification-content {
+    margin-left: 80px;
+    margin-top: 10px;
+}
+
+.notice1-cam-show-example-layout {
+    position: relative;
+    /* width: 100%; */
+    height: 480px;
+    
+    display: flex;
+    background-color: #000000
+}
+
+.notice1-cam-show-example {
+    position: relative;
+    width: 640px;
+    height: 480px;
+    margin: auto;
+
+    display: flex;
+    background-color: rgb(133, 133, 133)
+}
+
 
 .cam-show-layout {
     position: relative;
@@ -39,12 +77,35 @@
     background-color: #000000
 }
 
+/*-------------------- next button --------------------*/
+.next-button-layout {
+    height: 120px;
+}
 
-.mini-title {
-    /* height: 80px; */
+.next-button {
     display: flex;
-    /* justify-content: center; */
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    font-size: 1.2rem;
-    
+    margin-left: auto;
+
+    position: relative;
+    width: 200px;
+    height: 60px;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    color: white;
+    /* line-height: 37px; */
+    text-decoration: none;
+
+    background: rgba(91, 126, 251, 0.5);
+    border-radius: 35px;
+    border: none;
+    /* border-color: #A5A5A5; */
+    /* border-style: hidden; */
+
+    cursor: pointer;
 }
