Mypage.css - add hover

--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -72,8 +72,12 @@
 .list_data {
     line-height: 40px;
     text-decoration-line: none;
-    font-size: 1.5vw;
+    font-size: 1vw;
     text-align: center;
+    color: #000000;
+}
+.list_data:hover {
+    color: #5B7EFB;
 }
 
 .acenter {
