--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -93,7 +93,7 @@
 .mypage_footer_top2{
     z-index: 7;
     position: absolute;
-    top: 335vh;
+    top: 385vh;
 }
 .Menu-txt22{
     position: absolute;
@@ -155,4 +155,10 @@
     /* border: 0.1vw solid #5B7EFB; */
     background-color: #F0F2F4;
     text-align: justify;
+}
+.ChartBackground{
+    position: absolute;
+    left: 20.3vw;
+    top: 4.3vh;
+
 }
