--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -32,7 +32,7 @@
 
 .description-title {
     position: relative;
-    width: 500px;
+    /* width: 500px; */
     min-height: 50px;
     height: 90px;
     padding-left: 80px;
@@ -53,19 +53,20 @@
 
 .description-content {
     position: relative;
-    width: 800px;
-    height: 80px;
+    /* width: 800px; */
+    height: 150px;
     padding-left: 80px;
 
     font-family: Montserrat;
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 20px;
+    line-height: 30px;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
 
-    color: #838383;
+    /* color: #838383; */
+    color: rgb(133, 133, 133);
 }
 
 /*--------------------- cam setting ---------------------*/
@@ -73,7 +74,7 @@
     position: relative;
     /* width: 100%; */
     height: 580px;
-    margin-top: 20px;
+    margin-top: 60px;
     margin-right: 80px;
     /* left: 0px; */
     /* top: 433px; */
