--- a/src/front/src/pages/NotificationPage/Notification.css
+++ b/src/front/src/pages/NotificationPage/Notification.css
@@ -73,7 +73,7 @@
 /*-------------------- next button --------------------*/
 .next-button-layout {
     height: 120px;
-    margin-top: 45px;
+    margin-top: 50px;
     /* position: relative; */
 }
 
@@ -94,7 +94,7 @@
     font-size: 30px;
     color: white;
     /* line-height: 37px; */
-    text-decoration: none;
+    /* text-decoration-line: none; */
 
     background: rgba(91, 126, 251, 0.5);
     border-radius: 35px;
