--- a/src/front/src/pages/NotificationPage/Notification.css
+++ b/src/front/src/pages/NotificationPage/Notification.css
@@ -102,5 +102,11 @@
     /* border-color: #A5A5A5; */
     /* border-style: hidden; */
 
+    /* cursor: pointer; */
+}
+
+.next-button:hover{
+    background-color: #5B7EFB;
+    transition: all .2s ease-out;
     cursor: pointer;
 }
