--- a/src/front/src/pages/InterviewPage/Interview.css
+++ b/src/front/src/pages/InterviewPage/Interview.css
@@ -39,7 +39,7 @@
   width: 200px;
   height: 40px;
 
-  font-family: Montserrat;
+  /* font-family: Montserrat; */
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
@@ -81,7 +81,7 @@
   width: 200px;
   height: 40px;
 
-  font-family: Montserrat;
+  /* font-family: Montserrat; */
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
@@ -115,7 +115,7 @@
   width: 250px;
   height: 40px;
 
-  font-family: Montserrat;
+  /* font-family: Montserrat; */
   font-style: normal;
   font-weight: 600;
   font-size: 23px;
