--- a/src/front/src/pages/StepPage/Step.css
+++ b/src/front/src/pages/StepPage/Step.css
@@ -21,7 +21,7 @@
     height: 100px;
     padding-left: 80px;
     
-    font-family: Montserrat;
+    /* font-family: Montserrat; */
     /* font-weight: 500; */
     font-size: 19px;
     line-height: 27px;
