--- a/src/front/src/pages/components/Footer.css
+++ b/src/front/src/pages/components/Footer.css
@@ -18,7 +18,7 @@
   top: 0.8vw;
   left: 4vw;
 
-  font-family: 'Montserrat';
+  /* font-family: 'Montserrat'; */
   font-style: normal;
   font-weight: 500;
   font-size: 0.75vw;
