--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -39,7 +39,7 @@
     padding-top: 22px;
     margin-top: 100px;
 
-    font-family: Montserrat;
+    /* font-family: Montserrat; */
     font-style: normal;
     font-weight: 850;
     font-size: 34px;
@@ -57,7 +57,7 @@
     height: 150px;
     padding-left: 80px;
 
-    font-family: Montserrat;
+    /* font-family: Montserrat; */
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -87,7 +87,7 @@
     padding-left: 80px;
     /* top: 42px; */
 
-    font-family: Montserrat;
+    /* font-family: Montserrat; */
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
@@ -180,7 +180,7 @@
     /* left: 1197px; */
     /* top: 805px; */
 
-    font-family: Montserrat;
+    /* font-family: Montserrat; */
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
@@ -221,7 +221,7 @@
     /* margin-right: 80px; */
     /* padding-right: 80px; */
     
-    font-family: Montserrat;
+    /* font-family: Montserrat; */
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
