modify width size for Navbar

--- a/src/front/src/pages/components/Navbar/Navbar.css
+++ b/src/front/src/pages/components/Navbar/Navbar.css
@@ -5,9 +5,9 @@
     align-items: center;
     font-size: 1.2rem;
     position:absolute;
-    left: 2.5vw;
+    left: 2.8vw;
     width:auto;
-    /* margin-top: 10px; */
+    margin-top: 5px;
 
     z-index: 5;
     background: rgb(255, 255, 255);
