--- a/src/front/src/pages/NotificationPage/Notification.css
+++ b/src/front/src/pages/NotificationPage/Notification.css
@@ -22,7 +22,7 @@
     padding-left: 80px;
     
     /* font-family: Montserrat; */
-    /* font-weight: 500; */
+    font-weight: 500;
     font-size: 19px;
     line-height: 27px;
     /* color: rgb(81, 119, 255); */
