--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -39,7 +39,7 @@
     padding-top: 22px;
     margin-top: 100px;
 
-    /* font-family: Montserrat; */
+    font-family: EliceDigitalBaeum_Bold;
     font-style: normal;
     font-weight: 850;
     font-size: 34px;
