--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -82,15 +82,15 @@
 
 .cam-setting-title {
     position: relative;
-    width: 200px;
+    width: 300px;
     height: 40px;
     padding-left: 80px;
     /* top: 42px; */
 
-    /* font-family: Montserrat; */
+    font-family: EliceDigitalBaeum_Bold;
     font-style: normal;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 26px;
     line-height: 37px;
     color: rgb(81, 119, 255);
 
@@ -103,7 +103,7 @@
     /* width: 100%; */
     height: 480px;
     margin-left: 80px;
-    margin-top: 10px;
+    margin-top: 18px;
     /* margin-right: 80px; */
     /* padding-right: 80px; */
     
