--- a/src/front/src/pages/StepPage/Step.css
+++ b/src/front/src/pages/StepPage/Step.css
@@ -1,32 +1,46 @@
-.NotificationApp {
+.StepApp {
     /* position: relative; */
     width: 100%;
     height: auto;
     left: 0vw;
 }
 
-/* --------------- notice 1 ---------------- */
-.notification-layout1 {
-    position: relative;
-    /* width: 100%; */
-    height: 600px;
-    margin-top: 20px;
-    margin-right: 80px;
-}
-
-
-.notification-title {
-    /* position: relative; */
-    /* width: 200px; */
-    height: 100px;
+.step-title {
+    margin-bottom: 7px;
     padding-left: 80px;
     
-    /* font-family: Montserrat; */
-    /* font-weight: 500; */
-    font-size: 19px;
+    font-family: EliceDigitalBaeum_Bold;
+    font-size: 25px;
     line-height: 27px;
-    /* color: rgb(81, 119, 255); */
 
+    color: rgb(81, 119, 255);
+}
+
+.step-content {
+    margin-bottom: 65px;
+    padding-left: 80px;
+    
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+}
+
+.step1 {
     display: flex;
-    align-items: center;
+    /* margin: auto; */
+
+    margin-top: 22px;
+    width: 700px;
+    height: 450px;
+    border: solid;
+    border-color: black;
+}
+
+.step2 {
+    display: flex;
+    margin-top: 22px;
+    width: 700px;
+    height: 450px;
+    border: solid;
+
 }
