--- a/src/front/src/pages/NotificationPage/Notification.css
+++ b/src/front/src/pages/NotificationPage/Notification.css
@@ -14,33 +14,29 @@
     margin-right: 80px;
 }
 
-
 .notification-title {
     /* position: relative; */
     /* width: 200px; */
-    height: 100px;
+    /* height: 80px; */
+    margin-top: 30px;
+    margin-bottom: 20px;
     padding-left: 80px;
     
-    /* font-family: Montserrat; */
     font-weight: 500;
     font-size: 19px;
     line-height: 27px;
     /* color: rgb(81, 119, 255); */
 
     display: flex;
-    align-items: center;
-}
-
-.notification-content {
-    margin-left: 80px;
-    margin-top: 10px;
-    height: 500px;
+    /* align-items: center; */
 }
 
 .notice1-cam-show-example-layout {
     position: relative;
     /* width: 100%; */
     height: 480px;
+    margin-left: 80px;
+    margin-bottom: 42px;
     
     display: flex;
     background-color: #000000
@@ -82,14 +78,13 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
+    padding-bottom: 6px;
 
     /* position: relative; */
     width: 200px;
     height: 60px;
 
-    /* font-family: Montserrat; */
-    font-style: normal;
-    font-weight: 700;
+    font-family: EliceDigitalBaeum_Bold;
     font-size: 30px;
     color: white;
     /* line-height: 37px; */
