--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -5,9 +5,7 @@
     top: 80px;
     background: #56565c;
     color: #fff;
-    font-family: EliceDigitalBaeum_Bold;
-    font-size: 16px;
-    letter-spacing: 0.5px;
+    font-size: 14px;
 }
 
 .Menu-box{
@@ -20,8 +18,8 @@
 }
 .Menu-txt2{
     position: absolute;
-    font-size: 16px;
-    left: 100px;
+    font-size: 14px;
+    left: 105px;
     top: 40px;
     padding: 1rem;
     color: #5B7EFB;
@@ -45,10 +43,10 @@
 }
 .Img_mypage{
     position: absolute;
-    width:200px;
+    width:160px;
     bottom: 3vh;
-    left: 19px;
-    top:375px;
+    left: 20px;
+    top:350px;
 }
 .List_layer{
     display: grid;
@@ -61,10 +59,11 @@
 }
 .List {
     padding: 1vw;
+    left: 70%;
     margin-left: 20%;
     margin-right: 1vw;
     min-height: 400px;
-    min-width: 750px;
+    min-width: 950px;
     
     /* border: 0.2vw solid #5B7EFB; */
 }
@@ -107,7 +106,7 @@ a {
 .mypage_footer_top{
     z-index: 7;
     position: absolute;
-    top: 100vh;
+    top: 110vh;
 }
 
 /*-------------------- Feedback.js에서만 사용 -----------------*/
@@ -150,7 +149,7 @@ a {
 }
 .Interviewer-section{
     position: relative;
-    width: 180px;
+    width: 700px;
     left: 190px;
     top:40px;
 }
