--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -5,7 +5,9 @@
     top: 80px;
     background: #56565c;
     color: #fff;
-    font-size: 14px;
+    font-family: EliceDigitalBaeum_Bold;
+    font-size: 16px;
+    letter-spacing: 0.5px;
 }
 
 .Menu-box{
@@ -18,8 +20,8 @@
 }
 .Menu-txt2{
     position: absolute;
-    font-size: 14px;
-    left: 105px;
+    font-size: 16px;
+    left: 100px;
     top: 40px;
     padding: 1rem;
     color: #5B7EFB;
@@ -51,7 +53,7 @@
 .List_layer{
     display: grid;
     min-height: 90vh;
-    left: 50%;
+    left: 20%;
     color: #56565c;
 }
 .List_box{
