--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -62,7 +62,7 @@
 .List {
     padding: 1vw;
     left: 50%;
-    margin-left: 20%;
+    margin-left: 82px;
     margin-right: 1vw;
     min-height: 400px;
     min-width: 950px;
