--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -5,7 +5,9 @@
     top: 80px;
     background: #56565c;
     color: #fff;
-    font-size: 14px;
+    font-family: EliceDigitalBaeum_Bold;
+    font-size: 16px;
+    letter-spacing: 0.5px;
 }
 
 .Menu-box{
@@ -18,8 +20,8 @@
 }
 .Menu-txt2{
     position: absolute;
-    font-size: 14px;
-    left: 105px;
+    font-size: 16px;
+    left: 100px;
     top: 40px;
     padding: 1rem;
     color: #5B7EFB;
@@ -43,15 +45,15 @@
 }
 .Img_mypage{
     position: absolute;
-    width:160px;
+    width:200px;
     bottom: 3vh;
-    left: 20px;
-    top:350px;
+    left: 19px;
+    top:375px;
 }
 .List_layer{
     display: grid;
     min-height: 90vh;
-    left: 50%;
+    left: 20%;
     color: #56565c;
 }
 .List_box{
@@ -59,8 +61,8 @@
 }
 .List {
     padding: 1vw;
-    left: 70%;
-    margin-left: 20%;
+    left: 50%;
+    margin-left: 82px;
     margin-right: 1vw;
     min-height: 400px;
     min-width: 950px;
@@ -79,7 +81,7 @@
 
 .list_grid {
     display: grid;
-    grid-template-columns: 20% 50% 30%;
+    grid-template-columns: 50% 50%;
 
 }
 .list_data {
@@ -106,7 +108,7 @@ a {
 .mypage_footer_top{
     z-index: 7;
     position: absolute;
-    top: 110vh;
+    top: 100vh;
 }
 
 /*-------------------- Feedback.js에서만 사용 -----------------*/
@@ -149,14 +151,14 @@ a {
 }
 .Interviewer-section{
     position: relative;
-    width: 700px;
-    left: 190px;
+    width: 870px;
+    left: 250px;
     top:40px;
 }
 
 .Feedback-txt{
     position: relative;
-    left: 30px;
+    left: 90px;
     font-size: 16px;
     font-weight: 600;
 }
@@ -164,7 +166,7 @@ a {
     position: relative;
     left: 30px;
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 700;
     color:#5B7EFB;
 }
 
@@ -184,9 +186,9 @@ a {
 }
 .ChartBackground{
     position: absolute;
-    left: 230px;
-    top: 27px;
+    left: 270px;
+    top: 29px;
     width: 500px;
-    height: 305x;
+    height: 310x;
 
 }
