--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -81,7 +81,7 @@
 
 .list_grid {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 20% 50% 30%;
 
 }
 .list_data {
