--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -108,7 +108,7 @@ a {
 .mypage_footer_top{
     z-index: 7;
     position: absolute;
-    top: 100vh;
+    top: 800px;
 }
 
 /*-------------------- Feedback.js에서만 사용 -----------------*/
