--- a/src/front/src/pages/InterviewPage/Interview.css
+++ b/src/front/src/pages/InterviewPage/Interview.css
@@ -12,7 +12,7 @@
   position: relative;
   width: 100%;
   margin-left: auto;
-  height: 650px;
+  height: 660px;
   /* height: 100vh; */
   /* text-align: center; */
 }
@@ -33,7 +33,7 @@
   /* justify-content: center;
   align-items: center; */
   margin: auto;
-  /* margin-top: 5px; */
+  margin-top: 5px;
   padding-bottom: 5px;
 
   /* position: relative; */
